samples/_failures_safe/1761320883_f417b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55e9863a.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_55e9863a.c:166:13: error: expected expression at end of input
  166 |             if (
      |             ^~
./samples/SAFE/__tmp_55e9863a.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55e9863a.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55e9863a.c:166:13: error: expected declaration or statement at end of input
